# schemas

./: Pipfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: assessment-format-issue.md
.github/workflows/: static.yml  validation.yml
assessment/dev/: context.jsonld  example.json
examples/: identifier_example.json  indicator_example.json  metric_example.json
fdschema/: .pre-commit-config.yaml  Pipfile  README.md  generate_yaml.py
fdschema/.github/workflows/: static.yml  validation.yml
fdschema/examples/: indicator_example.json
fdschema/static/: index.html
fdschema/static/indicator/: indicator_schema.html
fdschema/tests/: test_schemas.py
indicators/: template.yaml
quality_dimensions/: README.md  context.jsonld
quality_dimensions/0.0.1/: context.jsonld
quality_dimensions/0.0.2/: README.md  context.jsonld  example.json
quality_dimensions/dev/: README.md  context.jsonld
quality_indicators/: README.md  indicator_schema.json
quality_indicators/0.0.1/: README.md  context.jsonld
quality_indicators/0.0.2/: README.md  example.json
quality_indicators/dev/: README.md  context.jsonld  example.json  indicator_schema_validator.json
schemas/: identifier_schema.json  indicator_schema.json  metric_schema.json
software/: README.md
software/0.0.1/: README.md  context.jsonld
software/dev/: README.md  context.jsonld  example.json
static/: data_generator.html  index.html
static/identifier/: identifier_schema.html
static/indicator/: indicator_schema.html
tests/: test_schemas.py
training_materials/: README.md
