[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "everse-schemas"
description = "Schemas for EVERSE project"
dependencies = [
    "jsonschema >=4.23.0, <5",
]
keywords = [
]
license = {text = "Apache Software License"}
readme = "README.md"
requires-python = ">=3.13"
version = "0.0.1"


[project.optional-dependencies]
dev = [
]

testing = [
    "pytest >= 8",
    "pytest-cov"
]


[tool.setuptools.packages.find]
where = ["."]


[tool.pytest.ini_options]
addopts = "--no-cov --verbose --maxfail=1 --strict-markers --import-mode=importlib --cache-clear --strict-config"

minversion = "8.3"
pythonpath = [
    "."
]

testpaths = [
    "tests"
]
